--- a/app/templates/player_info.html
+++ b/app/templates/player_info.html
@@ -180,7 +180,7 @@
                 {% endif %}
             {% elif player_info.grad_college %}
             <td class="field-val complete"><label class="black-border">Graduated!</label></td>
-            {% if not player_info.clicked_button %}
+            {% elif not player_info.clicked_button %}
             <td class="field-val"><label class="black-border">0 yrs left</label></td>
             {% else %}
             <td class="field-val"><label class="black-border">N/A</label></td>
@@ -196,7 +196,7 @@
                 {% endif %}
             {% elif player_info.done_grad_1 %}
             <td class="field-val complete"><label class="black-border">Graduated!</label></td>
-            {% if not player_info.clicked_button %}
+            {% elif not player_info.clicked_button %}
             <td class="field-val"><label class="black-border">0 yrs left</label></td>
             {% else %}
             <td class="field-val"><label class="black-border">N/A</label></td>
@@ -212,7 +212,7 @@
                 {% endif %}
             {% elif player_info.done_grad_2 %}
             <td class="field-val complete"><label class="black-border">Graduated!</label></td>
-            {% if not player_info.clicked_button %}
+            {% elif not player_info.clicked_button %}
             <td class="field-val"><label class="black-border">0 yrs left</label></td>
             {% else %}
             <td class="field-val"><label class="black-border">N/A</label></td>
@@ -228,7 +228,7 @@
                 {% endif %}
             {% elif player_info.done_grad_6 %}
             <td class="field-val complete"><label class="black-border">Graduated!</label></td>
-            {% if not player_info.clicked_button %}
+            {% elif not player_info.clicked_button %}
             <td class="field-val"><label class="black-border">0 yrs left</label></td>
             {% else %}
             <td class="field-val"><label class="black-border">N/A</label></td>
