fix college yrs

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -90,6 +90,10 @@
                 }, 5000);
             });
 
+            $(document).ready(function(){
+                $('[data-toggle="tooltip"]').tooltip();
+            });
+
             // $(document).ready(function(){
             //     var socket = io.connect();
             //     socket.on('my response', function(msg) {
