--- a/app/templates/player_info.html
+++ b/app/templates/player_info.html
@@ -157,7 +157,7 @@
             <td class="field-val"><label class="black-border">{{ num_people }}</label></td>
             <td class="field-name"><label class="field-label blue">Married</label></td>
             <td class="field-val"><label class="black-border">{{ "yes" if player_info.married else "no" }}</label></td>
-            <td class="field-name"><label class="field-label blue">Kids</label></td>
+            <td class="field-name"><label class="field-label blue" data-toggle="tooltip" data-html="true" title="under 18" data-placement="bottom">Kids</label></td>
             <td class="field-val"><label class="black-border">{{ player_info.num_kids }}</label></td>
             <td class="field-name"><label class="field-label blue">Ages</label></td>
             <td class="field-val"><label class="black-border">{{ ", ".join(player_info.kids_ages.split(";")) }}</label></td>
@@ -340,10 +340,14 @@
         mil_start_college = parseInt("{{ player_info.mil_start_college }}");
         if((picked_card.toLowerCase() == "true")) {
             document.getElementById('pick-card-button').disabled = true;
-            if((mil_to_college && mil_start_college == 0))
+            if((mil_to_college && mil_start_college == 0)) {
                 document.getElementById('do-action-button').disabled = true;
-            else
+                document.getElementById("no-action-button").disabled = true;
+            }
+            else {
                 document.getElementById('do-action-button').disabled = false;
+                document.getElementById('no-action-button').disabled = false;
+            }
 
             disable_no_action = "{{ player_info.disable_no_action }}".toLowerCase() == "true" ? true : false;
             if(disable_no_action) 
