--- a/app/templates/stats.html
+++ b/app/templates/stats.html
@@ -87,9 +87,12 @@
             var legendRectSize = 18;                                  
             var legendSpacing = 5; 
 
+            var expenses = parseInt("{{ player_info.expenses }}");
+            var savings = parseInt("{{ player_info.income - player_info.expenses }}");
+
             data1 = [
-                {label: "Expenses", count: parseInt("{{ player_info.expenses }}")},
-                {label: "Savings", count: parseInt("{{ player_info.income - player_info.expenses }}")}
+                {label: "Expenses", count: expenses},
+                {label: "Savings", count: savings}
             ]
             var color = d3.scaleOrdinal().range(["red", "green"])
             
@@ -130,13 +133,11 @@
                 return color(d.data.label);
             });
 
-            path.on('mouseover', function(d) {                            
-                var total = d3.sum(data1.map(function(d) {               
-                return d.count;                                           
+            path.on('mouseover', function(d) { 
+                var total = d3.sum(data1.map(function(d) {              
+                    return d.count;                                           
                 }));                                        
-                var percent = Math.round(1000 * d.data.count / total) / 10; 
-                if(percent < 0)
-                    percent = 100
+                var percent = Math.round(1000 * d.data.count / total) / 10;               
                 tooltip.attr('id', "tooltip-left")
                 tooltip.select('.label').html(d.data.label).style('font-weight', 'bold');                
                 tooltip.select('.count').html('$' + d.data.count.toLocaleString('en'));                
