fix twins as first child

--- a/app/templates/actions.html
+++ b/app/templates/actions.html
@@ -289,6 +289,7 @@
                     <li>pay $100</li>
                     <li>do not incur minor medical fees</li>
                     <li>receive 10 points per year</li>
+                    <li>pay $100 per year for pet fees</li>
                     <span class="once">* can only have one pet</span>
                 </ul>
             </td>
