--- a/app/templates/jobs.html
+++ b/app/templates/jobs.html
@@ -77,7 +77,7 @@
                 <p class="job-details"><b>$10,000</b></p>
                 <p class="job-details small"><span class="once">* no pay raises</span></p>
                 <p class="job-details small">taxed @ <span class="tax-10">10%</span></p>
-                <p class="job-details small stress-pts">-{{ '{:,.0f}'.format(10000 / 1000) }} pts/yr</p>
+                <p class="job-details small stress-pts">-{{ '{:,.0f}'.format(10000 / 1000 + 50) }} pts/yr</p>
             </td>
             <td class="col-attrs">
                 <ul>
@@ -96,7 +96,7 @@
                 <p class="job-details"><b>$10,000</b></p>
                 <p class="job-details small"><span class="once">* no pay raises</span></p>
                 <p class="job-details small">taxed @ <span class="tax-10">10%</span></p>
-                <p class="job-details small stress-pts">-{{ '{:,.0f}'.format(10000 / 1000) }} pts/yr</p>
+                <p class="job-details small stress-pts">-{{ '{:,.0f}'.format(10000 / 1000 + 50) }} pts/yr</p>
             </td>
             <td class="col-attrs">
                 <ul>
@@ -115,7 +115,7 @@
                 <p class="job-details"><b>$13,000</b></p>
                 <p class="job-details small"><span class="once">* no pay raises</span></p>
                 <p class="job-details small">taxed @ <span class="tax-10">10%</span></p>
-                <p class="job-details small stress-pts">-{{ '{:,.0f}'.format(13000 / 1000) }} pts/yr</p>
+                <p class="job-details small stress-pts">-{{ '{:,.0f}'.format(13000 / 1000 + 50) }} pts/yr</p>
             </td>
             <td class="col-attrs">
                 <ul>
@@ -134,7 +134,7 @@
                 <p class="job-details"><b>$15,000</b></p>
                 <p class="job-details small"><span class="once">* no pay raises</span></p>
                 <p class="job-details small">taxed @ <span class="tax-10">10%</span></p>
-                <p class="job-details small stress-pts">-{{ '{:,.0f}'.format(15000 / 1000) }} pts/yr</p>
+                <p class="job-details small stress-pts">-{{ '{:,.0f}'.format(15000 / 1000 + 50) }} pts/yr</p>
             </td>
             <td class="col-attrs">
                 <ul>
