--- a/app/templates/cards.html
+++ b/app/templates/cards.html
@@ -130,6 +130,12 @@
         <tr>
             <td class="bad-card" id="Earthquake damage">Earthquake damage</td>
             <td>pay $50,000<br>
+                * $5000 goes to carpenter
+            </td>
+        </tr>
+        <tr>
+            <td class="bad-card" id="Fire damage">Fire damage</td>
+            <td>pay $50,000<br>
                 * $5000 goes to firefighter
             </td>
         </tr>
@@ -519,27 +525,27 @@
         </tr>
         <tr>
             <td class="bad-card" id="Bad roommate">Bad roommate</td>
-            <td>-100 points</td>
+            <td>-25 points</td>
         </tr>
         <tr>
             <td class="bad-card" id="Pull an all-nighter">Pull an all-nighter</td>
-            <td>-100 points</td>
+            <td>-25 points</td>
         </tr>
         <tr>
             <td class="bad-card" id="Dumped by significant other">Dumped by significant other</td>
-            <td>-100 points</td>
+            <td>-25 points</td>
         </tr>
         <tr>
             <td class="bad-card" id="Required class is full">Required class is full</td>
-            <td>-250 points</td>
+            <td>-50 points</td>
         </tr>
         <tr>
             <td class="bad-card" id="Bed bugs in dorm">Bed bugs in dorm</td>
-            <td>-250 points</td>
+            <td>-50 points</td>
         </tr>
         <tr>
             <td class="bad-card" id="Fail exam">Fail exam</td>
-            <td>-500 points</td>
+            <td>-100 points</td>
         </tr>
         <tr>
             <td class="good-card" id="Sell used textbooks">Sell used textbooks</td>
@@ -579,7 +585,7 @@
         </tr>
         <tr>
             <td class="bad-card" id="Slept in; missed class">Slept in; missed class</td>
-            <td>-50 points</td>
+            <td>-25 points</td>
         </tr>
     </table>
 {% endblock %}
