--- a/app/static/css/stats.css
+++ b/app/static/css/stats.css
@@ -90,3 +90,13 @@ hr {
     margin-left: 30%
 }
 
+#home-button {
+    background-color: lightskyblue;
+    color: indigo;
+    font-weight: bold;
+}
+
+#home-button:hover {
+    color: white;
+}
+
