--- a/app/templates/cards.html
+++ b/app/templates/cards.html
@@ -13,7 +13,7 @@
             <td>+50 points</td>
         </tr>
         <tr>
-            <td class="good-card" id="Donate to goodwill">Donate to goodwill</td>
+            <td class="good-card" id="Donate to Goodwill">Donate to Goodwill</td>
             <td>+50 points</td>
         </tr>
         <tr>
