--- a/app/templates/stats.html
+++ b/app/templates/stats.html
@@ -14,7 +14,7 @@
     <body>
         <div id="nav-container" class="d-flex justify-content-between">
             <div class="mx-auto row row-fluid">
-                <div class="p-2"><a href="{{ url_for('player') }}" class="nav-link">Home</a></div>
+                <div class="p-2"><a href="{{ url_for('player') }}" class="nav-link" id="home-button">Home</a></div>
                 <div class="p-2"><a href="{{ url_for('player_info', card_text='???') }}" class="nav-link">Player Info</a></div>
                 <div class="p-2"><a href="{{ url_for('cards') }}" class="nav-link">Cards</a></div>
                 <div class="p-2"><a href="{{ url_for('actions') }}" class="nav-link">Actions</a></div>
