--- a/app/templates/expenses.html
+++ b/app/templates/expenses.html
@@ -119,6 +119,7 @@
                 </ul>
             </td>
             <td>
+                <p id="tax-0">income <= $20,000: no taxes</p>
                 <p id="tax-10">income < $40,000: 10%</p>
                 <p id="tax-20">income < $80,000: 20%</p>
                 <p id="tax-30">income < $200,000: 30%</p>
@@ -312,7 +313,7 @@
                 {% if player_info.depressed %}
                 <p class="gain">Depression: +{{ "{:,.0f}".format(depression_pts) }} points</p>
                 {% endif %}
-                {% if my_job == "Teacher" %}
+                {% if my_job == "Teacher" and player_info.current_salary < 100000 %}
                 <p class="gain">Teacher Appreciation: +100 points</p>
                 {% endif %}
                 {% if my_path == "college" and my_job != "None" %}
@@ -449,7 +450,7 @@
                 <label class="in-line" id='can-afford'>Can Afford: $<span id="loans-afford"></span></label>
                 {% endif %}
                 
-                <p class="auto-ins-bg input-label pad-bottom"><b>Auto Insurance </b></p>
+                <p class="auto-ins-bg input-label pad-bottom" data-toggle="tooltip" data-html="true" title="Covers: <br>-Car accidents"><b>Auto Insurance </b></p>
                 {% if no_fam_car %}
                     <input type="checkbox" name="auto-ins" class="ins-checkbox in-line" value="auto-ins" id="new-auto-ins" disabled>
                     <label for="auto-ins" class="in-line checkbox-label">${{ '{:,.0f}'.format(new_auto_ins) }}</label>
@@ -465,7 +466,7 @@
                     <label for="auto-ins" class="in-line checkbox-label">${{ '{:,.0f}'.format(car.insurance) }}</label>
                 {% endif %}
             
-                <p class="health-ins-bg input-label pad-bottom"><b>Health Insurance </b></p>
+                <p class="health-ins-bg input-label pad-bottom" data-toggle="tooltip" data-html="true" title="Covers: <br>-Major medical problems<br>-Chiropractor<br>-Psychologist (<del>depression</del>)"><b>Health Insurance </b></p>
                 {% if player_info.age < 25 and my_benefits and not benefits_run_out %}
                     <input type="checkbox" name="health-ins" class="ins-checkbox in-line" value="health-ins" id="new-health-ins" disabled checked>
                 {% elif player_info.age == 25 and not my_benefits %}
@@ -480,7 +481,7 @@
                 <label class="in-line once" class="ins-notice">Not covered by parents</label>
                 {% endif %}
 
-                <p class="home-ins-bg input-label pad-bottom"><b>Home Insurance </b></p>
+                <p class="home-ins-bg input-label pad-bottom" data-toggle="tooltip" data-html="true" title="Covers: <br>-Earthquake damage<br>-Fire damage"><b>Home Insurance </b></p>
                 {% if no_fam_house %}
                     <input type="checkbox" name="home-ins" class="ins-checkbox in-line" value="home-ins" id="new-home-ins" disabled>
                     <label for="home-ins" class="in-line checkbox-label">${{ '{:,.0f}'.format(new_home_ins) }}</label>
@@ -597,7 +598,9 @@
             if(job == "Athlete")
                 income *= 0.25
 
-            if(income < 40000)
+            if(income <= 20000)
+                document.getElementById("tax-0").setAttribute('style', 'font-weight: bold;');
+            else if(income < 40000)
                 document.getElementById("tax-10").setAttribute('style', 'font-weight: bold;');
             else if(income < 80000)
                 document.getElementById("tax-20").setAttribute('style', 'font-weight: bold;');
@@ -664,7 +667,9 @@
                 if(job == "Athlete")
                     income *= 0.25
 
-                if(income < 40000)
+                if(income <= 20000)
+                    document.getElementById("tax-0").setAttribute('style', 'font-weight: bold;');
+                else if(income < 40000)
                     document.getElementById("tax-10").setAttribute('style', 'font-weight: bold;');
                 else if(income < 80000)
                     document.getElementById("tax-20").setAttribute('style', 'font-weight: bold;');
